# check-virtsys-1.0

./: CMakeLists.txt  Makefile  Makefile_tst  README.md  check-virtsys  check-virtsys.pro  check-virtsys.pro.user.b33bae9  check-virtsys.pro.user.d1619e0  check-virtsys.pro.user.d8181f7  check-virtsys.spec  deb.cmake  debugsourcefiles.list  make.sh  moc_check_virtsys_manager.cpp  moc_check_virtsys_virtsysdatainfo.cpp  moc_check_virtsys_window.cpp  moc_check_virtsys_xml.cpp  moc_mainwindow.cpp  moc_predefs.h  qrc_resource.cpp  tags  ui_mainwindow.h
data/: check-virtsys.desktop
debian/: README.source  changelog  check-virtsys.cron.d.ex  check-virtsys.doc-base.EX  control  copyright  debhelper-build-stamp  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  virsys-manage.substvars  watch.ex
debian/.debhelper/virsys-manage/: dbgsym-build-ids
debian/.debhelper/virsys-manage/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/virsys-manage/dbgsym-root/usr/share/doc/: virsys-manage-dbgsym
debian/virsys-manage/DEBIAN/: control  md5sums
debian/virsys-manage/usr/share/doc/virsys-manage/: README.Debian
include/checkVirsys/: check_virtsts_genernal.h  check_virtsys.h  check_virtsys_basewindow.h  check_virtsys_manager.h  check_virtsys_nrcpuusagewindow.h  check_virtsys_thread.h  check_virtsys_virtsysdatainfo.h  check_virtsys_virtsysdomainwindow.h  check_virtsys_virtsysnetworkwindow.h  check_virtsys_window.h  check_virtsys_xml.h  mainwindow.h
include/protocols/: tcp-client.h
include/virCloudManage/: mainwindow.h
include/widgets/: framelesswidget.h
resource/: CMakeLists.txt  QListWidget.qss  frameLessWidget.qss  frameLessWidget_4k.qss  ico.rc  resource.qrc  resource.rcc
src/: CMakeLists.txt  Makefile  check-virtsys  check_virtsts_genernal.cpp  check_virtsts_genernal.h  check_virtsts_genernalwindow.cpp  check_virtsts_genernalwindow.h  check_virtsys.cpp  check_virtsys_aboutdialog.cpp  check_virtsys_aboutdialog.h  check_virtsys_basewindow.cpp  check_virtsys_detailedwindow.cpp  check_virtsys_detailedwindow.h  check_virtsys_manager.cpp  check_virtsys_nrcpuusagewindow.cpp  check_virtsys_thread.cpp  check_virtsys_virtsysdatainfo.cpp  check_virtsys_virtsysdomainwindow.cpp  check_virtsys_virtsysnetworkwindow.cpp  check_virtsys_window.cpp  check_virtsys_window.h  check_virtsys_xml.cpp  check_virtsys_xml.h  main.cpp  mainwindow.cpp  mainwindow.h  tags  test.h  virsysInfo.py  xml  xml.go
src/3rd/: CMakeLists.txt
src/RemoteConnect/: CMakeLists.txt  main.cpp  remote-connect-mainWindow.cpp  remote-connect-mainWindow.h  remote-connect-vnc.cpp  remote-connect-vnc.h
src/checkVirsys/: CMakeLists.txt  check_virtsts_genernal.cpp  check_virtsts_genernalwindow.cpp  check_virtsys.cpp  check_virtsys_aboutdialog.cpp  check_virtsys_basewindow.cpp  check_virtsys_detailedwindow.cpp  check_virtsys_manager.cpp  check_virtsys_nrcpuusagewindow.cpp  check_virtsys_thread.cpp  check_virtsys_virtsysdatainfo.cpp  check_virtsys_virtsysdomainwindow.cpp  check_virtsys_virtsysnetworkwindow.cpp  check_virtsys_window.cpp  check_virtsys_xml.cpp  mainwindow.cpp  mainwindow.ui
src/protocols/: CMakeLists.txt  socket-manage.cpp  tcp-client.cpp  tcp-server.cpp
src/resource/: listwid.qss  resource.qrc
src/virCloudManage/: CMakeLists.txt  main.cpp
src/widgets/: CMakeLists.txt  Makefile  PopupWidget.cpp  Splitter.cpp  cmake_install.cmake  framelesswidget.cpp
